test/e2e/pass/runtime/runtime_join_promotion.cst
runtime fn source() -> num {
    2
}

fn main() {
    let value: runtime num = if true { 1 } else { source() };
    let _ = value;
}
