test/e2e/fail_compile/type_errors/ct_required_local_annotation.cst
fn main() -> runtime num {
    let count: const num = runtime { 1 };
    count
}
